--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "github-consumer-backend",
   "version": "1.0.0",
   "description": "BackEnd for Github's API Consumer that shows Users and Repos",
-  "main": "server.js",
+  "main": "api/index.js",
   "scripts": {
-    "dev": "nodemon server.js",
-    "start": "node server.js",
+    "dev": "nodemon api/index.js",
+    "start": "nodemon api/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
