--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "api/index.js",
   "scripts": {
     "dev": "nodemon api/index.js",
-    "start": "nodemon api/index.js",
+    "server": "nodemon api/index.js",
+    "start": "node api/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
