--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "github-consumer-backend",
   "version": "1.0.0",
   "description": "BackEnd for Github's API Consumer that shows Users and Repos",
-  "main": "api/index.js",
+  "main": "index.js",
   "scripts": {
-    "dev": "nodemon api/index.js",
-    "server": "nodemon api/index.js",
-    "start": "node api/index.js",
+    "dev": "nodemon index.js",
+    "server": "nodemon index.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
